# SHiFT

./: .gitmodules  LICENSE  README.md  README_Comparison.md  README_Proxy.md  afl_patch.diff  aflplusplus_patch.diff
AFL/: .gitignore  Makefile  README.md  afl-fuzz.c  config.h  launch_fuzzer.sh  protocol.c  protocol.h  record.txt  serialport.h  test_usb.c  types.h  usb.c  usb.h
AFLplusplus/: GNUmakefile  README_SHiFT.md
AFLplusplus/include/: config.h
SHiFTcode/: README.md
SHiFTcode/Template-USARTL152FUZZER/: .cproject  .mxproject  .project  STM32L152RETX_FLASH_MPU.ld  STM32L152RETX_FLASH_MPU_ASAN.ld  Template-USARTL152FUZZER.ioc  Template-USARTL152FUZZER.launch
SHiFTcode/Template-USBCDCH743FUZZER/: .cproject  .mxproject  .project  Template-USBCDCH743FUZZER.ioc  Template-USBCDCH743FUZZER.launch  USBCDCH743 Debug.launch  makefile
SHiFTcode/Template-USBCDCH745FUZZDC/: .mxproject  .project  MemoryLayout.txt  Template-USBCDCH745FUZZDC.ioc
SHiFTcode/Template-USBCDCH745FUZZER/: .mxproject  .project  Template-USBCDCH745FUZZER.ioc
SHiFTcode/Template-USBCDCL552FUZZER/: .cproject  .mxproject  .project  STM32L552ZETXQ_FLASH.ld  STM32L552ZETXQ_FLASH_MPU.ld  STM32L552ZETXQ_FLASH_MPU_ASAN.ld  Template-USBCDCL552FUZZER.ioc  Template-USBCDCL552FUZZER.launch
SHiFTcode/Template-USBDISCOH745FUZZER/: .mxproject  .project  Template-USBDISCOH745FUZZER.ioc
SHiFTcode/Template-USBSCDCH723FUZZER/: .cproject  .mxproject  .project  STM32H723ZGTX_FLASH_MPU_ASAN.ld  Template-USBCDCH723FUZZER.ioc  Template-USBCDCH723FUZZER.launch
SHiFTcode/TemplateNXP/Template/evkmimxrt1170/dev_cdc_vcom_lite_bm_cm7_Template/: .cproject  CMakeLists.txt  arm-none-eabi-gcc.cmake  evkmimxrt1170_dev_cdc_vcom_lite_bm_cm7_Template LinkServer Debug  CMake.launch  evkmimxrt1170_dev_cdc_vcom_lite_bm_cm7_Template LinkServer Debug.launch
SHiFTcode/TemplateNXP/Template/evkmimxrt1170/dev_cdc_vcom_lite_bm_cm7_Template/CommonSHIFT/: CMakeLists.txt
SHiFTcode/TemplateNXP/Template/evkmimxrt1170/dev_cdc_vcom_lite_bm_cm7_Template/CommonSHIFT/AsanRuntime/ASANMCU/config/: McuASANconfig.h
SHiFTcode/TemplateNXP/Template/evkmimxrt1170/dev_cdc_vcom_lite_bm_cm7_Template/CommonSHIFT/FreeRTOS-Kernel-M3/include/: mpu_wrappers.h
SHiFTcode/TemplateNXP/Template/evkmimxrt1170/dev_cdc_vcom_lite_bm_cm7_Template/CommonSHIFT/FreeRTOS-Kernel-M33/portable/Common/: mpu_wrappers_v2.c
SHiFTcode/TemplateNXP/Template/evkmimxrt1170/dev_cdc_vcom_lite_bm_cm7_Template/CommonSHIFT/FreeRTOS-Kernel-M33/portable/GCC/ARM_CM33_NTZ/non_secure/: portmacrocommon.h
SHiFTcode/TemplateNXP/Template/evkmimxrt1170/dev_cdc_vcom_lite_bm_cm7_Template/CommonSHIFT/Fuzzing/Inc/: fuzzing.h
SHiFTcode/TemplateNXP/Template/evkmimxrt1170/dev_cdc_vcom_lite_bm_cm7_Template/CommonSHIFT/Fuzzing/Src/: SanitizerGCC.c  fault_handlersRTOS.c  fuzzing.c
SHiFTcode/TemplateNXP/Template/evkmimxrt1170/dev_cdc_vcom_lite_bm_cm7_Template/CommonSHIFT/MallocMPU/FreeRTOS/: application_defined_privileged_functions_1046.h  freertos_tasks_c_additions.h
SHiFTcode/TemplateNXP/Template/evkmimxrt1170/dev_cdc_vcom_lite_bm_cm7_Template/FuzzerSHIFT/: CMakeLists.txt
SHiFTcode/TemplateNXP/Template/evkmimxrt1170/dev_cdc_vcom_lite_bm_cm7_Template/FuzzerSHIFT/inc/: ConfigFuzzing.h  McuASANconfig.h
SHiFTcode/TemplateNXP/Template/evkmimxrt1170/dev_cdc_vcom_lite_bm_cm7_Template/FuzzerSHIFT/src/: MonitorAndTargetSingleCore.c
SHiFTcode/TemplateNXP/Template/evkmimxrt1170/dev_cdc_vcom_lite_bm_cm7_Template/board/: CMakeLists.txt
SHiFTcode/TemplateNXP/Template/evkmimxrt1170/dev_cdc_vcom_lite_bm_cm7_Template/component/: CMakeLists.txt
SHiFTcode/TemplateNXP/Template/evkmimxrt1170/dev_cdc_vcom_lite_bm_cm7_Template/drivers/: CMakeLists.txt
SHiFTcode/TemplateNXP/Template/evkmimxrt1170/dev_cdc_vcom_lite_bm_cm7_Template/ld/: evkmimxrt1170_dev_cdc_vcom_lite_bm_cm7_Template_Debug.ld  evkmimxrt1170_dev_cdc_vcom_lite_bm_cm7_Template_Debug_library.ld  evkmimxrt1170_dev_cdc_vcom_lite_bm_cm7_Template_Debug_memory.ld
SHiFTcode/TemplateNXP/Template/evkmimxrt1170/dev_cdc_vcom_lite_bm_cm7_Template/source/: main.h  printhelpers.c  virtual_com.c  virtual_com.h
SHiFTcode/TemplateNXP/Template/evkmimxrt1170/dev_cdc_vcom_lite_bm_cm7_Template/usb/: CMakeLists.txt
SHiFTcode/TemplateNXP/Template/evkmimxrt1170/dev_cdc_vcom_lite_bm_cm7_Template/utilities/: CMakeLists.txt
SHiFTcode/TemplateNXPfreedom/frdmk66f/dev_cdc_vcom_freertos/FuzzerSHIFT/: CMakeLists.txt
SHiFTcode/TemplateNXPfreedom/frdmk66f/dev_cdc_vcom_freertos/FuzzerSHIFT/inc/: ConfigFuzzing.h  McuASANconfig.h
SHiFTcode/TemplateNXPfreedom/frdmk66f/dev_cdc_vcom_freertos_Template_synthetic/FuzzerSHIFT/: CMakeLists.txt
SHiFTcode/TemplateNXPfreedom/frdmk66f/dev_cdc_vcom_freertos_Template_synthetic/FuzzerSHIFT/inc/: ConfigFuzzing.h  McuASANconfig.h
SHiFTcode/TemplateNXPfreedom/frdmk66f/dev_cdc_vcom_freertos_Template_synthetic/FuzzerSHIFT/src/: MonitorAndTargetSingleCore.c
SHiFTcode/TemplateSAMD51.X/: AtmelStart.gpdsc  atmel_start.c  atmel_start_config.atstart  main.c  usb_start.c
SHiFTcode/USBCDCH743FUZZER-ShellyDimmer/: .cproject  .mxproject  .project  Template-USBCDCH743FUZZER.launch  USBCDCH743FUZZER-ShellyDimmer.ioc  makefile
SHiFTcode/USBCDCH743FUZZERModBusPLC/: .cproject  .mxproject  .project  Template-USBCDCH743FUZZER.launch  USBCDCH743FUZZERModBusPLC.ioc  makefile
SHiFTcode/USBCDCH743FUZZERModbusDMA/: .cproject  .mxproject  .project  USBCDCH743FUZZERModbusDMA.ioc  USBCDCH743ModbusDebug.launch  makefile
afl_proxy/: Makefile  README_SHiFT_proxy.md  config.h  types.h
helpers/: FuzzerBBcollector.py  conf.yaml  file_to_binary_string.py  samd51Pyocd.yaml  serialEchoProtocol.py  serialEcholoop.py  serialEcholoopRandom.py  serialList.py  stm32crc.py
shift_proxy/: Makefile  crctest.c  protocol.c  protocol.h  serialport.h
toolchains/: .gitattributes  gcc-arm-none-eabi-10.3-2021.12-0x24000000-0x10000000.tar.bz2  gcc-arm-none-eabi-10.3-2021.12-0x24000000-0x10000000.tar.xz  gcc-arm-none-eabi-10.3-2021.12-0x24000000.tar.bz2  gcc-arm-none-eabi-10.3-2021.12-0x24000000.tar.xz  gcc-linaro-12.2.1-12.2.rel1-0x20010000.tar.xz  readme.md  toolchain.md
(+834 files in other folders)
